--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,8 +1,13 @@
 /* code here  */
 .redColor{
-
+   color:red;
+   font-size:30px;
+  
 }
 
 .blueColor{
-
+   display:none;
+  color:blue;
+  font-size:30px;
+  font-style:italic;
 }
